2020-05-20  Karl Berry  <karl@freefriends.org>

	* dvips.texi (Virtual fonts): add brief mention of this new vf/jfm
	feature, from Takuji. Update all ctan links while here.

2020-05-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-vf.test, testdata/upjf.{tex,dvi,tfm},
	testdata/upjf_{full,omit}.vf, testdata/upjf_{full,omit}.cnf:
	Update the test.

2020-04-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Makefile.{am,in}, uptex-vf.test,
	testdata/Makefile_upjf, testdata/upjf{,-r,-g}.tfm,
	testdata/upjf.{tex,dvi,map}, testdata/upjf_{full,omit}.vf,
	testdata/upjf_{full,omit}.cnf:
	Add a new test for fallback of virtual fonts.

2020-04-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {virtualfont,pprescan,scanpage,dopage}.c, dvips.h:
	Fallback multibyte character in virtual font for (u)pTeX.
	https://github.com/texjporg/tex-jp-build/issues/99

	A new rule for virtual fonts is implemented:
	If a virtual font has no entry of a codepoint and the first
	MAPFONT designates a (u)pTeX TFM(JFM), then we designate the
	glyph (usually with a fullwidth metric) of the same codepoint
	in the TFM(JFM) with the smallest font ID.
	The new rule helps to shrink size of Japanese virtual fonts.

2020-04-10  Akira Kakuto  <kakuto@w32tex.org>

	* dospecial.c: Support \special{psfile=non-ascii-name}.

2020-03-27  Karl Berry  <karl@tug.org>

	* TeX Live 2020.

2020-02-29  Tomas Rokicki  <rokicki@gmail.com>

	* loadfont.c (bitmapfontseen): define new global.
	(loadfont): set it, if a bitmap font is seen.
	* protos.h (bitmapfontseen): declare it.
	* output.c (initprinter): If bitmapfontseen, emit
	%%ViewingOrientation comment to try to cope with Distiller's
        auto-orientation (page rotation).

2020-01-30  Karl Berry  <karl@freefriends.org>

	* Makefile.am (enc_DATA): new variable, for new file dvips-all.enc.
	* configure.ac (encdir): define it.

2020-01-30  Akira Kakuto  <kakuto@w32tex.org>

	* bitmapenc.c: use strchr() instead of index(), because index()